Corrected nav-bar alignment

--- a/scss/menus/_menu-1.scss
+++ b/scss/menus/_menu-1.scss
@@ -101,7 +101,7 @@
   .nav-menu-bar {
     // Position the <ul> over the header
     position: absolute;
-    right: 0;
+    right: 1em;
     .menu-item {
       float: left;
       .sub-menu {
